--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,21 +5,55 @@
 }
 
 body {
-    background-color: rgb(230, 169, 100);
+    display: flex;
+    flex-direction: column;
+    background-color: rgb(0, 190, 86);
 }
 
 .header {
-    padding: 20px;
+    padding: 50px;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     background-color: #000000;
-    color: #ffffff;
+    color: aliceblue;
     border-bottom: solid rgb(30, 226, 12);
+}
+
+.header h1 {
+    display: inline-block;
+    font-size: 48px;
 }
 
 h2 {
     padding: 20px;
+    font-size: 35px;
 }
 
 nav {
+    padding-top: 15px;
+    margin-right: 20px;
     float: right;
+    display: flex;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-size: 20px;
+}
+
+nav a {
+    display: inline-block;
+    margin-left: 25px;
+    color: aliceblue;
+}
+
+.content {
+    width: 75%;
+    display: inline-block;
+    margin-left: 20px;
+}
+
+.key-tag {
+    margin-bottom: 20px;
+    padding: 50px;
+    height: 300px;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    background-color: #000000;
+    color: #ffffff;
 }
