--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -24,9 +24,8 @@ body {
 }
 
 .profile {
-    justify-content: flex-start;
-    max-height: 100%;
-    max-width: 100%;
+    padding: 20px;
+    float: left;
 }
 
 h2 {
