--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,13 +1,13 @@
-* {
+*, html {
     box-sizing: border-box;
     padding: 0;
-    margin: 0;
 }
 
 body {
     display: flex;
     flex-direction: column;
     background-color: rgb(0, 190, 86);
+    line-height: 150%;
 }
 
 .header {
@@ -16,6 +16,7 @@ body {
     background-color: #000000;
     color: aliceblue;
     border-bottom: solid rgb(30, 226, 12);
+    justify-content: center;
 }
 
 .header h1 {
@@ -23,22 +24,24 @@ body {
     font-size: 48px;
 }
 
-.profile {
+.workflow {
     padding: 20px;
-    float: left;
+    float: right;
+    justify-content: flex-start;
 }
 
 h2 {
     padding: 20px;
     font-size: 35px;
-    text-align: center;
+    text-align: left;
 }
 
 nav {
     padding-top: 15px;
+    width: 100%;
     margin-right: 20px;
-    float: right;
     display: flex;
+    justify-content: space-evenly;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     font-size: 20px;
 }
@@ -50,15 +53,15 @@ nav a {
 }
 
 .content {
-    width: 75%;
+    width: 100%;
     display: inline-block;
-    margin-left: 20px;
+    margin: 20px;
 }
 
 .key-tag {
     margin-bottom: 20px;
-    padding: 50px;
-    height: 300px;
+    padding: 10px;
+    height: 400px;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     background-color: #000000;
     color: #ffffff;
@@ -66,8 +69,8 @@ nav a {
 
 .key-link {
     margin-bottom: 20px;
-    padding: 50px;
-    height: 300px;
+    padding: 10px;
+    height: 200px;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     background-color: #000000;
     color: #ffffff;
