--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,7 @@
 *, html {
     box-sizing: border-box;
     padding: 0;
+    margin: 0;
 }
 
 body {
@@ -16,7 +17,6 @@ body {
     background-color: #000000;
     color: aliceblue;
     border-bottom: solid rgb(30, 226, 12);
-    justify-content: center;
 }
 
 .header h1 {
@@ -39,15 +39,15 @@ h2 {
 nav {
     padding-top: 15px;
     width: 100%;
-    margin-right: 20px;
     display: flex;
     justify-content: space-evenly;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    font-size: 20px;
+    font-size: 25px;
 }
 
 nav a {
     display: inline-block;
+    margin-top: 85px;
     margin-left: 25px;
     color: aliceblue;
 }
@@ -59,7 +59,7 @@ nav a {
 }
 
 .key-tag {
-    margin-bottom: 20px;
+    margin: 50px;
     padding: 10px;
     height: 400px;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
@@ -68,7 +68,7 @@ nav a {
 }
 
 .key-link {
-    margin-bottom: 20px;
+    margin: 50px;
     padding: 10px;
     height: 200px;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
