--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,8 @@
+:root {
+    --dark: black;
+    --light: white;
+}
+
 *, html {
     box-sizing: border-box;
     padding: 0;
@@ -14,8 +19,8 @@ body {
 .header {
     padding: 50px;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-    background-color: #000000;
-    color: aliceblue;
+    background-color: var(--dark);
+    color: var(--light);
     border-bottom: solid rgb(30, 226, 12);
 }
 
@@ -49,7 +54,7 @@ nav a {
     display: inline-block;
     margin-top: 85px;
     margin-left: 25px;
-    color: aliceblue;
+    color: var(--light);
 }
 
 .content {
@@ -60,19 +65,43 @@ nav a {
 
 .key-tag {
     margin: 50px;
-    padding: 10px;
+    width: 89%;
+    padding: 85px;
     height: 400px;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    background-color: #000000;
+    background-color: var(--dark);
     color: #ffffff;
 }
 
 .key-link {
-    margin: 50px;
+    margin: -2%;
     padding: 10px;
-    height: 200px;
+    height: 150px;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    background-color: #000000;
-    color: #ffffff;
+    background-color: var(--dark);
+    color: var(--light);
     text-align: center;
+}
+
+@media screen and (min-width: 992px) and (max-width: 1200px) {
+    main,
+    nav {
+      display: flex;
+      margin-left: 1230px;
+      width: 30%;
+      height: 70px;
+      padding: 7px;
+  }
+
+    nav a:hover {
+    color: turquoise;
+  }
+
+    nav a {
+        color: firebrick;
+        justify-content: flex-start;
+        padding-top: 15px;
+        font-size: 1.5rem;
+    }
+
 }
