--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -13,11 +13,11 @@ body {
     display: flex;
     flex-direction: column;
     background-color: rgb(0, 190, 86);
-    line-height: 150%;
 }
 
 .header {
     padding: 50px;
+    width: 104%;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     background-color: var(--dark);
     color: var(--light);
@@ -84,7 +84,7 @@ nav a {
 }
 
 @media screen and (min-width: 992px) and (max-width: 1200px) {
-    main,
+    section,
     nav {
       display: flex;
       margin-left: 1230px;
