--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -31,14 +31,13 @@ body {
 
 .workflow {
     padding: 20px;
-    float: right;
-    justify-content: flex-start;
+    display: flex;
+    flex-direction: row;
 }
 
 h2 {
     padding: 20px;
     font-size: 35px;
-    text-align: left;
 }
 
 nav {
@@ -57,17 +56,20 @@ nav a {
     color: var(--light);
 }
 
+div {
+    background-color: var(--dark);
+}
+
 .content {
     width: 100%;
-    display: inline-block;
+    display: flex;
+    flex-direction: column;
     margin: 20px;
 }
 
 .key-tag {
-    margin: 50px;
     width: 89%;
     padding: 85px;
-    height: 400px;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     background-color: var(--dark);
     color: #ffffff;
@@ -75,6 +77,7 @@ nav a {
 
 .key-link {
     margin: -2%;
+    margin-top: 8%;
     padding: 10px;
     height: 150px;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
