--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,4 @@
+/* universal edits to css/html */
 :root {
     --dark: black;
     --light: white;
@@ -8,13 +9,13 @@
     padding: 0;
     margin: 0;
 }
-
+/* start edits to css to get direction and color of deployed site */
 body {
     display: flex;
     flex-direction: column;
     background-color: rgb(0, 190, 86);
 }
-
+/* Header css edits to organize title and anchors */
 .header {
     padding: 50px;
     width: 104%;
@@ -28,18 +29,12 @@ body {
     display: inline-block;
     font-size: 48px;
 }
-
-.workflow {
-    padding: 20px;
-    display: flex;
-    flex-direction: row;
-}
-
+/* Section css edits to entire body of content */
 h2 {
     padding: 20px;
     font-size: 35px;
 }
-
+/* Css edits to images and anchors in order to organize content on page  */
 nav {
     padding-top: 15px;
     width: 100%;
@@ -58,15 +53,16 @@ nav a {
 
 div {
     background-color: var(--dark);
+    padding-left: 150px;
 }
-
+/* Css edits to all parts of section element */
 .content {
     width: 100%;
     display: flex;
     flex-direction: column;
     margin: 20px;
 }
-
+/* Css edits to organize and style the parts inside section element */
 .key-tag {
     width: 89%;
     padding: 85px;
