--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -52,8 +52,11 @@ nav a {
 }
 
 div {
+    margin-top: 50px;
     background-color: var(--dark);
     padding-left: 150px;
+    display: flex;
+    justify-content: space-evenly;
 }
 /* Css edits to all parts of section element */
 .content {
@@ -64,7 +67,7 @@ div {
 }
 /* Css edits to organize and style the parts inside section element */
 .key-tag {
-    width: 89%;
+    width: 100%;
     padding: 85px;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     background-color: var(--dark);
